--- a/app/src/main/res/layout/fragment_receive.xml
+++ b/app/src/main/res/layout/fragment_receive.xml
@@ -52,7 +52,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:padding="8dp"
+            android:padding="12dp"
+            android:layout_margin="6dp"
             android:layout_marginStart="8dp"
             android:src="@drawable/circular_pulse"
             app:layout_constraintBottom_toTopOf="@+id/receivedDataContainer"
