--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -22,7 +22,8 @@
             android:id="@+id/tw_userIp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_gravity="start"
+            android:layout_marginStart="16dp"
             android:text="@string/your_ip"
             android:textSize="16sp"
             android:textStyle="bold" />
